--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,13 @@
     "version": "1.0",
   
     "browser_action": {
-     "default_icon": "icon.png",
-     "default_popup": "popup.html"
+      "default_title": "Hello!",
+     "default_icon": "icon.png"
+    },
+
+    "background": {
+      "scripts": ["background.js"],
+      "persistent": false
     },
     "permissions": [
      "activeTab",
